# aoc2024

./: .gitignore  Cargo.toml
src/: bucket.rs  main.rs  task01.rs  task02.rs  task03.rs  task04.rs  task05.rs  task06.rs  task07.rs  task08.rs  task09.rs  task10.rs  task11.rs  task12.rs  task13.rs  task14.rs  task15.rs  task16.rs  task17.rs  task18.rs  task19.rs  task20.rs
