[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
bitvec = "1.0.1"
fxhash = "0.2.1"
nom = "7.1.3"
graphsearch = { git = "https://github.com/cosmobobak/graphsearch" }
regex = "1.11.1"
smartstring = "1.0.1"

[profile.release]
# debug = true
lto = true
codegen-units = 1
